fixed size and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -145,12 +145,12 @@ body {
 }
 #clear{
   background-color: transparent;
-  height:350px;
+  height:250px;
 }
 header {
   background-image: url('../img/header.jpg');
   width: 100%;
-  height:850px;
+  height:750px;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -159,7 +159,7 @@ header {
 #textOne {
   font-family: 'Julius Sans One', sans-serif;
   color: white;
-  font-size: 7.5em;
+  font-size: 6em;
   font-weight: 300;
 }
 #subTextOne {
@@ -167,11 +167,11 @@ header {
   color: white;
   text-align: center;
   display: block;
-  font-size: 3em;
+  font-size: 2em;
   font-weight: 400;
 }
 #info {
-  font-size: 2em;
+  font-size: 1.7em;
   font-weight: 100;
   width:100%;
 }
@@ -179,18 +179,21 @@ header {
   background-color: #00655C;
   background-size: cover;
   width: 100%;
-  height: 850px;
+  height: 750px;
   color: white;
 }
+#me{
+  height:340px;
+}
 h2{
-  font-size: 3em;
+  font-size: 2em;
 }
 #aboutHead {
   color:white;
-  font-size: 3em;
+  font-size: 2em;
 }
 #aboutProjects {
-  font-size: 2em;
+  font-size: 1.7em;
   font-weight: 100;
   color: white;
   width:100%;
@@ -201,7 +204,7 @@ h2{
   width: 100%;
 }
 .projectDetails{
-  font-size: 2em;
+  font-size: 1.7em;
   font-weight: 100;
   color: black;
   width:100%;
@@ -211,7 +214,7 @@ h2{
   color: white;
   background-size: cover;
   width: 100%;
-  height:850px;
+  height:640px;
 }
 
 hr{
